--- a/2017/templates/layout.html
+++ b/2017/templates/layout.html
@@ -71,6 +71,7 @@
     <script src="{{ url_for('static', filename='playofftree.js') }}"> </script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="{{ url_for('static', filename='bootstrap.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='datascroller.js') }}"></script>
     <!--hårdkod ovan -->
   </body>
 </html>
