--- a/2017/templates/playofftree.html
+++ b/2017/templates/playofftree.html
@@ -45,12 +45,12 @@
 	  <p class="score">1</p>
 	</div>
 	<div class="col-xs-6">
-	  <a href="/birdroadscup/games/BRC/G1/game1"><p class="score">Game 1</p></a>
-	  <a href="/birdroadscup/games/BRC/G1/game2"><p class="score">Game 2</p></a>
-	  <a href="/birdroadscup/games/BRC/G1/game3"><p class="score">Game 3</p></a>
-	  <a href="/birdroadscup/games/BRC/G1/game4"><p class="score">Game 4</p></a>
-	  <a href="/birdroadscup/games/BRC/G1/game5"><p class="score">Game 5</p></a>
-	  <a href="/birdroadscup/games/BRC/G1/game6"><p class="score">Game 6</p></a>
+	  <a href="/games/BRC/game1"><p class="score">Game 1</p></a>
+	  <a href="/games/BRC/game2"><p class="score">Game 2</p></a>
+	  <a href="/games/BRC/game3"><p class="score">Game 3</p></a>
+	  <a href="/games/BRC/game4"><p class="score">Game 4</p></a>
+	  <a href="/games/BRC/game5"><p class="score">Game 5</p></a>
+	  <a href="/games/BRC/game6"><p class="score">Game 6</p></a>
 	</div>
 	<div class="col-xs-3">
 	  <p class="score">4</p>
@@ -63,6 +63,5 @@
       </div>
     <div class="col-xs-5"></div>
   </div>
-  <div id="matchCallback"></div>
 </div>
 {% endblock %}
