upp pa internet mannen

--- a/2017/templates/gamesummary.html
+++ b/2017/templates/gamesummary.html
@@ -7,18 +7,18 @@
   </style>
 {% endblock %}
 {% block content %}
-<div class="container-fluid">
+<div class="container">
   <div class="row">
     <div class="col-xs-4">
       <img class="centering" src="/static/teams/{{info[1]}}/{{info[1]}}logo.png" width="100%"></img>
-      <p class="score">{{info[1]}}</p>
+      <p class="finalscore">{{info[1]}}</p>
     </div>
     <div class="col-xs-4">
-      {{body}}
+      {{body|safe}}
     </div>
     <div class="col-xs-4">
       <img class="centering" src="/static/teams/{{info[2]}}/{{info[2]}}logo.png" width="100%"></img>
-      <p class="score">{{info[2]}}</p>
+      <p class="finalscore">{{info[2]}}</p>
     </div>
   </div>
 </div>
