--- a/2017/templates/layout.html
+++ b/2017/templates/layout.html
@@ -28,8 +28,8 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/playofftree">Playoff Tree</a></li>
-	    <li><a href="#teams">Draft</a></li>
-            <li><a href="#stats">Stats</a></li>
+	    <li><a href="#draft">Draft</a></li>
+            <li><a href="/stats">Stats</a></li>
 	    <li><a href="#teams">Awards</a></li>
 	    <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Teams</a>
@@ -72,6 +72,10 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="{{ url_for('static', filename='bootstrap.min.js') }}"></script>
     <script src="{{ url_for('static', filename='datascroller.js') }}"></script>
+    <script src="https://cdn.datatables.net/1.10.15/css/dataTables.bootstrap.min.css"></script>
+    <script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script>
+
     <!--hårdkod ovan -->
   </body>
 </html>
