bara jag bryr mig

--- a/2017/templates/game.html
+++ b/2017/templates/game.html
@@ -14,7 +14,7 @@
     </div>
     <div class="col-xs-4">
       <p class="centeredtext">
-	<h1>{{info.team[0]}}-{{info.team[1]}}</h1>
+	<h1><a href="/teams/{{info.team[0]}}">{{info.team[0]}}</a>-<a href="/teams/{{info.team[1]}}">{{info.team[1]}}</a></h1>
 	<h3>{{info.score}}<h3>
       </p>
     </div>
