--- a/2017/templates/gamesummary.html
+++ b/2017/templates/gamesummary.html
@@ -11,14 +11,14 @@
   <div class="row">
     <div class="col-xs-4">
       <img class="centering" src="/static/teams/{{info[1]}}/{{info[1]}}logo.png" width="100%"></img>
-      <p class="finalscore">{{info[1]}}</p>
+     <a href="/teams/{{info[1]}}"><p class="finalscore">{{info[1]}}</p></a>
     </div>
     <div class="col-xs-4">
       {{body|safe}}
     </div>
     <div class="col-xs-4">
       <img class="centering" src="/static/teams/{{info[2]}}/{{info[2]}}logo.png" width="100%"></img>
-      <p class="finalscore">{{info[2]}}</p>
+      <a href="/teams/{{info[1]}}"><p class="finalscore">{{info[2]}}</p></a>
     </div>
   </div>
 </div>
