--- a/2017/templates/teams.html
+++ b/2017/templates/teams.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}{{name}}{% endblock %}
+{% block title %}{{team[0]}}{% endblock %}
 {% block head %}
 {{ super() }}
 <style type="text/css">
