--- a/2017/templates/layout.html
+++ b/2017/templates/layout.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <!-- navbar below -->
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-toggleable-md navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -27,12 +27,12 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/playofftree">Playoff Tree</a></li>
+            <li><a href="/playofftree">Playoff Tree</a></li>
 	    <li><a href="#draft">Draft</a></li>
             <li><a href="/stats">Stats</a></li>
 	    <li><a href="#teams">Awards</a></li>
 	    <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Teams</a>
+              <a class="navbar-toggleable-md" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Teams</a>
               <div class="dropdown-menu" aria-labelledby="dropdown01">
 		<a class="dropdown-item" href="/teams/ANA">ANA</a>
 		<a class="dropdown-item" href="/teams/BOS">BOS</a>
