--- a/2017/templates/child.html
+++ b/2017/templates/child.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}Index{% endblock %}
+{% block title %}Wow, you dumb!{% endblock %}
 {% block head %}
   {{ super() }}
   <style type="text/css">
@@ -7,7 +7,7 @@
   </style>
 {% endblock %}
 {% block content %}
-  <h1>Index</h1>
+  <h1>You Suck!</h1>
   <p class="important">
-    Welcome on my awesome homepage. {{name}}
+    If you're this bad at coming up with the URL yourself, stay to clicking things... </p>
 {% endblock %}
