--- a/2017/templates/layout.html
+++ b/2017/templates/layout.html
@@ -30,7 +30,7 @@
             <li><a href="/playofftree">Playoff Tree</a></li>
 	    <li><a href="#draft">Draft</a></li>
             <li><a href="/stats">Stats</a></li>
-	    <li><a href="#teams">Awards</a></li>
+	    <li><a href="/awards">Awards</a></li>
 	    <li class="nav-item dropdown">
               <a class="navbar-toggleable-md" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Teams</a>
               <div class="dropdown-menu" aria-labelledby="dropdown01">
