--- a/2017/templates/draft.html
+++ b/2017/templates/draft.html
@@ -1,13 +1,16 @@
 {% extends "layout.html" %}
-{% block title %}Index{% endblock %}
+{% block title %}Draft{% endblock %}
 {% block head %}
-  {{ super() }}
-  <style type="text/css">
-    .important { color: #336699; }
-  </style>
+{{ super() }}
+<style type="text/css">
+  .important { color: #336699; }
+</style>
 {% endblock %}
 {% block content %}
-  <h1>Index</h1>
-  <p class="important">
-    Welcome on my awesome homepage. {{name}}
+<div class="container">
+  <h1>Solo Draft</h1>
+  {{info.solotext|safe}}
+  <h1>2v2 Draft</h1>
+  {{info.dbltext|safe}}
+</div>
 {% endblock %}
