--- a/2017/templates/layout.html
+++ b/2017/templates/layout.html
@@ -28,7 +28,7 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="/playofftree">Playoff Tree</a></li>
-	    <li><a href="#draft">Draft</a></li>
+	    <li><a href="/draft">Draft</a></li>
             <li><a href="/stats">Stats</a></li>
 	    <li><a href="/awards">Awards</a></li>
 	    <li class="nav-item dropdown">
