--- a/2017/templates/game.html
+++ b/2017/templates/game.html
@@ -22,8 +22,26 @@
       <img src="/static/teams/{{info.team[1]}}/{{info.team[1]}}logo.png" width="100%" class="centering"></img>
     </div>
   </div>
-  
   <div class="row">
+    <p class="score">Game Stats</p>
+  </div>
+  <div class="row">
+    <img src="/static/games/{{info.matchid[0]}}/{{info.matchid[1]}}/{{info.game}}/stats.jpg" width="700pt" class="centering"></img>
+  </div>
+  <div class="row">
+    <p class="score">Three Stars</p>
+  </div>
+  <div class="row">
+    <img src="/static/games/{{info.matchid[0]}}/{{info.matchid[1]}}/{{info.game}}/3stars.jpg" width="700pt" class="centering"></img>
+  </div>
+  <div class="row">
+    <p class="score">Events</p>
+  </div>
+  <div class="row">
+    <img src="/static/games/{{info.matchid[0]}}/{{info.matchid[1]}}/{{info.game}}/events.jpg" width="700pt" class="centering"></img>
+  </div>
+
+<!--
     <div class="col-xs-4">
       <h2>Game Stats</h2>
     </div>
@@ -45,7 +63,9 @@
     <div class="col-xs-4">
       <img src="/static/games/{{info.matchid[0]}}/{{info.matchid[1]}}/{{info.game}}/events.jpg" width="90%" class="centering"></img>
     </div>
+
   </div>
+-->
 </div>
 {% endblock %}
 <!-- Unika koden for teams slutet-->
