--- a/2017/templates/awards.html
+++ b/2017/templates/awards.html
@@ -10,7 +10,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-4">
-      <img src="/static/awards/BirdRoadsCup.jpg" height="100%"></img>
+      <img src="/static/awards/BirdRoadsCup.jpg" class="centering" height="200pt"></img>
     </div>
     <div class="col-xs-4">
       <h1>Bird Roads Cup</h1>
@@ -23,7 +23,7 @@
   </div>
   <div class="row">
     <div class="col-xs-4">
-      <img src="/static/awards/ConnSmirkTrophy.jpg" height="100%"></img>
+      <img src="/static/awards/ConnSmirkTrophy.jpg" class="centering" height="160pt"></img>
     </div>
     <div class="col-xs-4">
       <h1>Conn Smirk Trophy</h1>
@@ -36,7 +36,7 @@
   </div>
   <div class="row">
     <div class="col-xs-4">
-      <img src="/static/awards/SteveIcermanTrophy.jpg" height="100%"></img>
+      <img src="/static/awards/SteveIcermanTrophy.jpg" class="centering" height="140pt"></img>
     </div>
     <div class="col-xs-4">
       <h1>Steve Icerman Trophy</h1>
@@ -49,7 +49,7 @@
   </div>
   <div class="row">
     <div class="col-xs-4">
-      <img src="/static/awards/DominikHasekAward.jpg" height="100%"></img>
+      <img src="/static/awards/DominikHasekAward.jpg" class="centering" height="120pt"></img>
     </div>
     <div class="col-xs-4">
       <h1>Dominik Hasek Award</h1>
