--- a/2017/templates/teams.html
+++ b/2017/templates/teams.html
@@ -23,13 +23,13 @@
   
   <div class="row">
     <div class="col-xs-4">
-      <h2>Forwards</h2>
+      <p class="score">Forwards</p>
     </div>
     <div class="col-xs-4">
-      <h2>Defenders</h2>
+      <p class="score">Defenders</p>
     </div>
     <div class="col-xs-4">
-      <h2>Goalies</h2>
+      <p class="score">Goalies</p>
     </div>
   </div>
     
