--- a/2017/templates/gamesummary.html
+++ b/2017/templates/gamesummary.html
@@ -14,6 +14,7 @@
      <a href="/teams/{{info[1]}}"><p class="finalscore">{{info[1]}}</p></a>
     </div>
     <div class="col-xs-4">
+      <p class="score">Game Details:</p>
       {{body|safe}}
     </div>
     <div class="col-xs-4">
