--- a/2017/templates/stats.html
+++ b/2017/templates/stats.html
@@ -7,44 +7,10 @@
 </style>
 {% endblock %}
 {% block content %}
-
-<table id="example" class="table table-striped table-bordered" width="100%" cellspacing="0">
-  <thead>
-    <tr>
-      <th>NAME</th>
-      <th>G</th>
-      <th>A</th>
-      <th>PTS</th>
-      <th>+/-</th>
-      <th>HITS</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>P.BUCHNEVICH</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>+1</td>
-      <td>1</td>
-    </tr>
-    <tr>
-      <td>M.GRABNER</td>
-      <td>1</td>
-      <td>0</td>
-      <td>1</td>
-      <td>-1</td>
-      <td>0</td>
-    </tr>
-    <tr>
-      <td>O.LINDBERG</td>
-      <td>1</td>
-      <td>1</td>
-      <td>2</td>
-      <td>+1</td>
-      <td>1</td>
-    </tr>
-  </tbody>
-</table>
-
+<div class="container">
+  <h1>Player Stats</h1>
+  {{playertable | safe}}
+  <h1>Goalie Stats</h1>
+  {{goalietable | safe}}
+</div>
 {% endblock %}
