--- a/2017/templates/stats.html
+++ b/2017/templates/stats.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}{{name}}{% endblock %}
+{% block title %}Stats{% endblock %}
 {% block head %}
 {{ super() }}
 <style type="text/css">
