--- a/2017/templates/gamesummary.html
+++ b/2017/templates/gamesummary.html
@@ -23,6 +23,10 @@
     </div>
   </div>
 </div>
+<div class="container">
+  {{table | safe}}
+</div>
+
 <script>
   function openInParent(url) {
     window.opener.location.href = url;
