--- a/2017/templates/gamesummary.html
+++ b/2017/templates/gamesummary.html
@@ -24,6 +24,9 @@
   </div>
 </div>
 <div class="container">
+  <div class="row">
+    <p class="score">Match Series Stats:</p>
+  </div>
   {{table | safe}}
 </div>
 
