--- a/2017/templates/layout.html
+++ b/2017/templates/layout.html
@@ -61,7 +61,7 @@
     <div id="content">{% block content %}{% endblock %}</div>
     <div id="footer">
       {% block footer %}
-      &copy; Copyright 2010 by <a href="http://domain.invalid/">you</a>.
+      &copy; Copyright 2017 by <a href="/teams/TBD">A Chaffinch in the Rough</a>.
       {% endblock %}
     </div>
     <!-- hårdkod nedan -->
