fortfarande problem med goaliestats

--- a/2017/templates/stats.html
+++ b/2017/templates/stats.html
@@ -11,6 +11,6 @@
   <h1>Player Stats</h1>
   {{playertable | safe}}
   <h1>Goalie Stats</h1>
-  {{goalietable | safe}}
+  <!--{{goalietable | safe}}-->
 </div>
 {% endblock %}
