2 dagar av spel

--- a/2017/templates/game.html
+++ b/2017/templates/game.html
@@ -39,6 +39,7 @@
   </div>
   <div class="row">
     <img src="/static/games/{{info.matchid[0]}}/{{info.matchid[1]}}/{{info.game}}/events.jpg" width="700pt" class="centering"></img>
+    {{events2 | safe}}
   </div>
 
 <!--
