forsok till att lagga till gktable, problem med sortering

--- a/2017/templates/layout.html
+++ b/2017/templates/layout.html
@@ -75,9 +75,9 @@
     <script src="https://cdn.datatables.net/1.10.15/css/dataTables.bootstrap.min.css"></script>
     <script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script>
-
+    <!--<script src="https://cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css"></script>
+    <script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>-->
     <script src="{{ url_for('static', filename='playofftree.js') }}"> </script>
-
     <!--hårdkod ovan -->
   </body>
 </html>
