--- a/2017/templates/stats.html
+++ b/2017/templates/stats.html
@@ -10,7 +10,9 @@
 <div class="container">
   <h1>Player Stats</h1>
   {{playertable | safe}}
+</div>
+<div class="container">
   <h1>Goalie Stats</h1>
-  <!--{{goalietable | safe}}-->
+  {{goalietable | safe}}
 </div>
 {% endblock %}
