--- a/2017/templates/awards.html
+++ b/2017/templates/awards.html
@@ -18,7 +18,7 @@
     </div>
     <div class="col-xs-4">
       <h3>Historik:</h3>
-      <p>2017: TBD</p>
+      <p>2017: Filip Backman</p>
     </div>
   </div>
   <div class="row">
@@ -31,7 +31,7 @@
     </div>
     <div class="col-xs-4">
       <h3>Historik:</h3>
-      <p>2017: TBD</p>
+      <p>2017: Vladimir Tarasenko</p>
     </div>
   </div>
   <div class="row">
