--- a/2017/templates/layout.html
+++ b/2017/templates/layout.html
@@ -30,6 +30,7 @@
             <li><a href="/playofftree">Playoff Tree</a></li>
 	    <li><a href="/draft">Draft</a></li>
             <li><a href="/stats">Stats</a></li>
+	    <li><a href="/humanstats">People Stats</a></li>
 	    <li><a href="/awards">Awards</a></li>
 	    <li class="nav-item dropdown">
               <a class="navbar-toggleable-md" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Teams</a>
@@ -50,6 +51,15 @@
 		<a class="dropdown-item" href="/teams/STL">STL</a>
 		<a class="dropdown-item" href="/teams/TOR">TOR</a>
 		<a class="dropdown-item" href="/teams/WSH">WSH</a>
+              </div>
+            </li>
+	    <li class="nav-item dropdown">
+              <a class="navbar-toggleable-md" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Profiles</a>
+              <div class="dropdown-menu" aria-labelledby="dropdown01">
+		<a class="dropdown-item" href="/profiles/Magnus_Ahlm">Magnus Ahlm</a>
+		<a class="dropdown-item" href="/profiles/Filip_Backman">Filip Backman</a>
+		<a class="dropdown-item" href="/profiles/Filip_Edstrom">Filip Edstrom</a>
+		<a class="dropdown-item" href="/profiles/Niklas_Wiberg">Niklas Wiberg</a>
               </div>
             </li>
           </ul>
