--- a/2017/templates/playofftree.html
+++ b/2017/templates/playofftree.html
@@ -46,7 +46,7 @@
   <div class="row">
     <div class="col-xs-4"></div>
     <div class="col-xs-4">
-      {{final.body | safe}}
+      <!--{{final.body | safe}}-->
     </div>
     <div class="col-xs-4"></div>
   </div>
