--- a/2017/templates/layout.html
+++ b/2017/templates/layout.html
@@ -33,34 +33,34 @@
 	    <li><a href="/humanstats">People Stats</a></li>
 	    <li><a href="/awards">Awards</a></li>
 	    <li class="nav-item dropdown">
-              <a class="navbar-toggleable-md" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Teams</a>
-              <div class="dropdown-menu" aria-labelledby="dropdown01">
-		<a class="dropdown-item" href="/teams/ANA">ANA</a>
-		<a class="dropdown-item" href="/teams/BOS">BOS</a>
-		<a class="dropdown-item" href="/teams/CBJ">CBJ</a>
-		<a class="dropdown-item" href="/teams/CGY">CGY</a>
-		<a class="dropdown-item" href="/teams/CHI">CHI</a>
-		<a class="dropdown-item" href="/teams/EDM">EDM</a>
-		<a class="dropdown-item" href="/teams/MIN">MIN</a>
-		<a class="dropdown-item" href="/teams/MTL">MTL</a>
-		<a class="dropdown-item" href="/teams/NAS">NAS</a>
-		<a class="dropdown-item" href="/teams/NYR">NYR</a>
-		<a class="dropdown-item" href="/teams/OTT">OTT</a>
-		<a class="dropdown-item" href="/teams/PIT">PIT</a>
-		<a class="dropdown-item" href="/teams/SJS">SJS</a>
-		<a class="dropdown-item" href="/teams/STL">STL</a>
-		<a class="dropdown-item" href="/teams/TOR">TOR</a>
-		<a class="dropdown-item" href="/teams/WSH">WSH</a>
-              </div>
+              <a class="navbar-toggleable-md" id="dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Teams</a>
+              <ul class="dropdown-menu" aria-labelledby="dropdown">
+		<li><a class="dropdown-item" href="/teams/ANA">ANA</a></li>
+		<li><a class="dropdown-item" href="/teams/BOS">BOS</a></li>
+		<li><a class="dropdown-item" href="/teams/CBJ">CBJ</a></li>
+		<li><a class="dropdown-item" href="/teams/CGY">CGY</a></li>
+		<li><a class="dropdown-item" href="/teams/CHI">CHI</a></li>
+		<li><a class="dropdown-item" href="/teams/EDM">EDM</a></li>
+		<li><a class="dropdown-item" href="/teams/MIN">MIN</a></li>
+		<li><a class="dropdown-item" href="/teams/MTL">MTL</a></li>
+		<li><a class="dropdown-item" href="/teams/NAS">NAS</a></li>
+		<li><a class="dropdown-item" href="/teams/NYR">NYR</a></li>
+		<li><a class="dropdown-item" href="/teams/OTT">OTT</a></li>
+		<li><a class="dropdown-item" href="/teams/PIT">PIT</a></li>
+		<li><a class="dropdown-item" href="/teams/SJS">SJS</a></li>
+		<li><a class="dropdown-item" href="/teams/STL">STL</a></li>
+		<li><a class="dropdown-item" href="/teams/TOR">TOR</a></li>
+		<li><a class="dropdown-item" href="/teams/WSH">WSH</a></li>
+	      </ul>
             </li>
 	    <li class="nav-item dropdown">
               <a class="navbar-toggleable-md" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Profiles</a>
-              <div class="dropdown-menu" aria-labelledby="dropdown01">
-		<a class="dropdown-item" href="/profiles/Magnus_Ahlm">Magnus Ahlm</a>
-		<a class="dropdown-item" href="/profiles/Filip_Backman">Filip Backman</a>
-		<a class="dropdown-item" href="/profiles/Filip_Edstrom">Filip Edstrom</a>
-		<a class="dropdown-item" href="/profiles/Niklas_Wiberg">Niklas Wiberg</a>
-              </div>
+              <ul class="dropdown-menu" aria-labelledby="dropdown01">
+		<li><a class="dropdown-item" href="/profiles/Magnus_Ahlm">Magnus Ahlm</a></li>
+		<li><a class="dropdown-item" href="/profiles/Filip_Backman">Filip Backman</a></li>
+		<li><a class="dropdown-item" href="/profiles/Filip_Edstrom">Filip Edstrom</a></li>
+		<li><a class="dropdown-item" href="/profiles/Niklas_Wiberg">Niklas Wiberg</a></li>
+              </ul>
             </li>
           </ul>
         </div><!--/.nav-collapse -->
