--- a/2017/templates/layout.html
+++ b/2017/templates/layout.html
@@ -33,8 +33,8 @@
 	    <li><a href="/humanstats">People Stats</a></li>
 	    <li><a href="/awards">Awards</a></li>
 	    <li class="nav-item dropdown">
-              <a class="navbar-toggleable-md" id="dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Teams</a>
-              <ul class="dropdown-menu" aria-labelledby="dropdown">
+              <a class="navbar-toggleable-md" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Teams</a>
+              <ul class="dropdown-menu" aria-labelledby="dropdown01">
 		<li><a class="dropdown-item" href="/teams/ANA">ANA</a></li>
 		<li><a class="dropdown-item" href="/teams/BOS">BOS</a></li>
 		<li><a class="dropdown-item" href="/teams/CBJ">CBJ</a></li>
@@ -62,6 +62,7 @@
 		<li><a class="dropdown-item" href="/profiles/Niklas_Wiberg">Niklas Wiberg</a></li>
               </ul>
             </li>
+	    <li><a href="/calendar">Calendar</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -71,7 +72,7 @@
     <div id="content">{% block content %}{% endblock %}</div>
     <div id="footer">
       {% block footer %}
-      &copy; Copyright 2017 by <a href="/teams/TBD">A Chaffinch in the Rough</a>.
+      <p class="footerspace">&copy; Copyright 2017 by <a href="/teams/TBD">A Chaffinch in the Rough</a></p>.
       {% endblock %}
     </div>
     <!-- hårdkod nedan -->
