--- a/2017/templates/profiles.html
+++ b/2017/templates/profiles.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}Awards{% endblock %}
+{% block title %}Profile: {{player.name}}{% endblock %}
 {% block head %}
 {{ super() }}
 <style type="text/css">
