--- a/2017/templates/layout.html
+++ b/2017/templates/layout.html
@@ -9,7 +9,7 @@
     {% block head %}
     <link href="{{ url_for('static', filename='bootstrap.min.css') }}" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='birdroadscup.css') }}">
-    <title>{% block title %}{% endblock %}</title>
+    <title>BRC - {% block title %}{% endblock %}</title>
     {% endblock %}
   </head>
   <body>
