--- a/2017/templates/awards.html
+++ b/2017/templates/awards.html
@@ -54,7 +54,7 @@
       <h5>2017: Karl Alzner (WSH)</h5>
     </div>
     <div class="col-xs-3">
-      <img src="/static/awards/Shattenkirk.jpg" class="centering" width="100%"></img>
+      <img src="/static/awards/Alzner.jpg" class="centering" width="100%"></img>
     </div>
 
   </div>
@@ -86,7 +86,7 @@
     <div class="col-xs-6">
       <div class="row">
 	<div class="col-xs-4"><img src="/static/awards/dreamteam/Cogliano.jpg" class="centering" width="100%"></img></div>
-	<div class="col-xs-4"><img src="/static/awards/dreamteam/Steen.jpg" class="centering" width="100%"></img></div>
+	<div class="col-xs-4"><img src="/static/awards/dreamteam/Stastny.jpg" class="centering" width="100%"></img></div>
 	<div class="col-xs-4"><img src="/static/awards/dreamteam/Tarasenko.jpg" class="centering" width="100%"></img></div>
       </div>
       <div class="row">
