changing the layout to use correct teams

--- a/2018/templates/layout.html
+++ b/2018/templates/layout.html
@@ -38,18 +38,17 @@
 		<li><a class="dropdown-item" href="/teams/ANA">ANA</a></li>
 		<li><a class="dropdown-item" href="/teams/BOS">BOS</a></li>
 		<li><a class="dropdown-item" href="/teams/CBJ">CBJ</a></li>
-		<li><a class="dropdown-item" href="/teams/CGY">CGY</a></li>
-		<li><a class="dropdown-item" href="/teams/CHI">CHI</a></li>
-		<li><a class="dropdown-item" href="/teams/EDM">EDM</a></li>
+		<li><a class="dropdown-item" href="/teams/COL">COL</a></li>
+		<li><a class="dropdown-item" href="/teams/LAK">LAK</a></li>
 		<li><a class="dropdown-item" href="/teams/MIN">MIN</a></li>
-		<li><a class="dropdown-item" href="/teams/MTL">MTL</a></li>
 		<li><a class="dropdown-item" href="/teams/NAS">NAS</a></li>
-		<li><a class="dropdown-item" href="/teams/NYR">NYR</a></li>
-		<li><a class="dropdown-item" href="/teams/OTT">OTT</a></li>
+		<li><a class="dropdown-item" href="/teams/NJD">NJD</a></li>
+		<li><a class="dropdown-item" href="/teams/PHI">PHI</a></li>
 		<li><a class="dropdown-item" href="/teams/PIT">PIT</a></li>
 		<li><a class="dropdown-item" href="/teams/SJS">SJS</a></li>
-		<li><a class="dropdown-item" href="/teams/STL">STL</a></li>
 		<li><a class="dropdown-item" href="/teams/TOR">TOR</a></li>
+		<li><a class="dropdown-item" href="/teams/VGK">VGK</a></li>
+		<li><a class="dropdown-item" href="/teams/WPG">WPG</a></li>
 		<li><a class="dropdown-item" href="/teams/WSH">WSH</a></li>
 	      </ul>
             </li>
