--- a/2018/templates/layout.html
+++ b/2018/templates/layout.html
@@ -46,6 +46,7 @@
 		<li><a class="dropdown-item" href="/teams/PHI">PHI</a></li>
 		<li><a class="dropdown-item" href="/teams/PIT">PIT</a></li>
 		<li><a class="dropdown-item" href="/teams/SJS">SJS</a></li>
+		<li><a class="dropdown-item" href="/teams/TBL">TBL</a></li>
 		<li><a class="dropdown-item" href="/teams/TOR">TOR</a></li>
 		<li><a class="dropdown-item" href="/teams/VGK">VGK</a></li>
 		<li><a class="dropdown-item" href="/teams/WPG">WPG</a></li>
