--- a/2018/templates/layout.html
+++ b/2018/templates/layout.html
@@ -60,6 +60,7 @@
 		<li><a class="dropdown-item" href="/profiles/Filip_Backman">Filip Backman</a></li>
 		<li><a class="dropdown-item" href="/profiles/Filip_Edstrom">Filip Edstrom</a></li>
 		<li><a class="dropdown-item" href="/profiles/Niklas_Wiberg">Niklas Wiberg</a></li>
+		<li><a class="dropdown-item" href="/profiles/Viktor_Wiberg">Viktor Wiberg</a></li>
               </ul>
             </li>
 	    <li><a href="/calendar">Calendar</a></li>
