--- a/2018/templates/awards.html
+++ b/2018/templates/awards.html
@@ -18,6 +18,7 @@
     </div>
     <div class="col-xs-3">
       <h2>Historik:</h2>
+      <h5>2018: TBD (TBD)</h5>
       <h5>2017: Filip Backman (STL)</h5>
     </div>
     <div class="col-xs-3">
@@ -35,6 +36,7 @@
     </div>
     <div class="col-xs-3">
       <h2>Historik:</h2>
+      <h5>2018: TBD (TBD)</h5>
       <h5>2017: Vladimir Tarasenko (STL)</h5>
     </div>
     <div class="col-xs-3">
@@ -51,6 +53,7 @@
     </div>
     <div class="col-xs-3">
       <h2>Historik:</h2>
+      <h5>2018: TBD (TBD)</h5>
       <h5>2017: Karl Alzner (WSH)</h5>
     </div>
     <div class="col-xs-3">
@@ -68,6 +71,7 @@
     </div>
     <div class="col-xs-3">
       <h2>Historik:</h2>
+      <h5>2018: TBD (TBD)</h5>
       <h5>2017: Braden Holtby (WSH)</h5>
     </div>
     <div class="col-xs-3">
