--- a/2018/templates/awards.html
+++ b/2018/templates/awards.html
@@ -18,7 +18,7 @@
     </div>
     <div class="col-xs-3">
       <h2>Historik:</h2>
-      <h5>2018: TBD (TBD)</h5>
+      <h5>2018: Filip Backman (TBL)</h5>
       <h5>2017: Filip Backman (STL)</h5>
     </div>
     <div class="col-xs-3">
@@ -53,7 +53,7 @@
     </div>
     <div class="col-xs-3">
       <h2>Historik:</h2>
-      <h5>2018: TBD (TBD)</h5>
+      <h5>2018: Alexander Kerfoot (COL)</h5>
       <h5>2017: Karl Alzner (WSH)</h5>
     </div>
     <div class="col-xs-3">
