added all teams and kerfoot

--- a/2018/templates/awards.html
+++ b/2018/templates/awards.html
@@ -57,7 +57,7 @@
       <h5>2017: Karl Alzner (WSH)</h5>
     </div>
     <div class="col-xs-3">
-      <img src="/static/awards/Alzner.jpg" class="centering" width="100%"></img>
+      <img src="/static/awards/Kerfoot.jpg" class="centering" width="100%"></img>
     </div>
 
   </div>
