--- a/2018/templates/awards.html
+++ b/2018/templates/awards.html
@@ -22,7 +22,7 @@
       <h5>2017: Filip Backman (STL)</h5>
     </div>
     <div class="col-xs-3">
-      <img src="/static/awards/Backman.jpg" class="centering" width="100%"></img>
+      <img src="/static/awards/Backman.png" class="centering" width="100%"></img>
     </div>
 
   </div>
@@ -36,11 +36,11 @@
     </div>
     <div class="col-xs-3">
       <h2>Historik:</h2>
-      <h5>2018: TBD (TBD)</h5>
+      <h5>2018: James Neal (VGK)</h5>
       <h5>2017: Vladimir Tarasenko (STL)</h5>
     </div>
     <div class="col-xs-3">
-      <img src="/static/awards/Tarasenko.jpg" class="centering" width="100%"></img>
+      <img src="/static/awards/Neal.jpg" class="centering" width="100%"></img>
     </div>
   </div>
   <div class="row">
@@ -71,11 +71,11 @@
     </div>
     <div class="col-xs-3">
       <h2>Historik:</h2>
-      <h5>2018: TBD (TBD)</h5>
+      <h5>2018: Andrei Vasilevskiy (TBL)</h5>
       <h5>2017: Braden Holtby (WSH)</h5>
     </div>
     <div class="col-xs-3">
-      <img src="/static/awards/Holtby.jpg" class="centering" width="100%"></img>
+      <img src="/static/awards/Vasilevskiy.jpg" class="centering" width="100%"></img>
     </div>
   </div>
 </div>
@@ -89,14 +89,14 @@
     <div class="col-xs-2"></div>
     <div class="col-xs-6">
       <div class="row">
-	<div class="col-xs-4"><img src="/static/awards/dreamteam/Cogliano.jpg" class="centering" width="100%"></img></div>
-	<div class="col-xs-4"><img src="/static/awards/dreamteam/Stastny.jpg" class="centering" width="100%"></img></div>
-	<div class="col-xs-4"><img src="/static/awards/dreamteam/Tarasenko.jpg" class="centering" width="100%"></img></div>
+	<div class="col-xs-4"><img src="/static/awards/dreamteam/Ovechkin.jpg" class="centering" width="100%"></img></div>
+	<div class="col-xs-4"><img src="/static/awards/dreamteam/Gourde.jpg" class="centering" width="100%"></img></div>
+	<div class="col-xs-4"><img src="/static/awards/dreamteam/Neal.jpg" class="centering" width="100%"></img></div>
       </div>
       <div class="row">
 	<div class="col-xs-2"></div>
-	<div class="col-xs-4"><img src="/static/awards/dreamteam/Shattenkirk.jpg" class="centering" width="100%"></img></div>
-	<div class="col-xs-4"><img src="/static/awards/dreamteam/Vatanen.jpg" class="centering" width="100%"></img></div>
+	<div class="col-xs-4"><img src="/static/awards/dreamteam/Letang.jpg" class="centering" width="100%"></img></div>
+	<div class="col-xs-4"><img src="/static/awards/dreamteam/Theodore.jpg" class="centering" width="100%"></img></div>
 	<div class="col-xs-2"></div>
       </div>
       <div class="col-xs-4"></div>
@@ -106,9 +106,9 @@
     <div class="col-xs-2"></div>
     <div class="col-xs-6">
       <h1>Honorable Mentions:</h1>
-      <h3>Rookie of the Year: Jesse Puljujarvi (EDM)</h3>
-      <h3>Surprise of the Year: Steve Ott (MTL)</h3>
-      <h3>Trashcan of the Year: Dan Girardi (NYR)</h3>
+      <h3>Rookie of the Year: Yanni Gourde (TBL)</h3>
+      <h3>Surprise of the Year: TBD (TBD)</h3>
+      <h3>Trashcan of the Year: TBD (TBD)</h3>
     </div>
     <div class="col-xs-2"></div>
   </div>
