something went wrong

--- a/2018/templates/awards.html
+++ b/2018/templates/awards.html
@@ -107,8 +107,9 @@
     <div class="col-xs-6">
       <h1>Honorable Mentions:</h1>
       <h3>Rookie of the Year: Yanni Gourde (TBL)</h3>
-      <h3>Surprise of the Year: TBD (TBD)</h3>
-      <h3>Trashcan of the Year: TBD (TBD)</h3>
+      <h3>Surprise of the Year: Colton Sissons (NAS)</h3>
+      <h3>Trashcan of the Year: Reilly Smith (VGK)</h3>
+      <p>Motivering: Lyckades med att skrapa ihop 1A på 8 matcher och minus-6 medan han spelade i samma kedja som poängkungen.
     </div>
     <div class="col-xs-2"></div>
   </div>
